# RegistrationSystem2

./: CMakeLists.txt
Backend/: TODO.txt  main.cpp  server.cpp  server.h
Backend/DataStructures/: Hashtable.cpp  Hashtable.h  LinkedList.cpp  LinkedList.h  bst.cpp  bst.h
Backend/StudentData/: Address.cpp  Address.h  Course.cpp  Course.h  CourseTutor.cpp  CourseTutor.h  Date.cpp  Date.h  Department.cpp  Department.h  GPA.cpp  GPA.h  Id.cpp  Id.h  Marks.cpp  Marks.h  Name.cpp  Name.h  Payment.cpp  Payment.h  Student.cpp  Student.h  StudentContact.cpp  StudentContact.h
